chbenchmark配置项修改： 1.mysql连接信息 2.并发数 3.测试时间